syntax = "proto3";

option go_package = "berty.tech/go/internal/group";

message SecretEntryEnvelope {
  bytes encrypted_secret_payload = 1;
  bytes secret_payload_signature = 2;
}

message SecretEntryPayload {
  bytes dest_member_pub_key = 1;
  bytes sender_device_pub_key = 2;
  bytes encrypted_device_secret = 3;
}

message DeviceSecret {
  bytes derivation_state = 1;
  uint64 counter = 2;
}
